RESOLVED FIXED271295
[IFC][Ruby] Line spacing is not even for contents that has ruby
https://bugs.webkit.org/show_bug.cgi?id=271295
Summary [IFC][Ruby] Line spacing is not even for contents that has ruby
alan
Reported 2024-03-19 20:28:24 PDT
Attachments
Patch (4.42 KB, patch)
2024-03-19 20:33 PDT, alan
no flags
[fast-cq]Patch (5.26 KB, patch)
2024-03-19 20:51 PDT, alan
no flags
alan
Comment 1 2024-03-19 20:33:13 PDT
alan
Comment 2 2024-03-19 20:51:02 PDT
Created attachment 470442 [details] [fast-cq]Patch
EWS
Comment 3 2024-03-20 06:43:46 PDT
Committed 276402@main (983282c29f7d): <https://commits.webkit.org/276402@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 470442 [details].
Note You need to log in before you can comment on or make changes to this bug.