[IFC][Ruby] Line spacing is not even for contents that has ruby https://bugs.webkit.org/show_bug.cgi?id=271295 <rdar://122436686>

Reviewed by Antti Koivisto.

Let annotation spill into previous/next line's half-leading to keep vertical (horizontal) rhythm (i.e. do not stretch lines with ruby too much even if it means overlapping adjacent line boxes).

* LayoutTests/fast/ruby/tight-line-spacing-with-line-height-expected.html: Added.
* LayoutTests/fast/ruby/tight-line-spacing-with-line-height.html: Added.
* Source/WebCore/layout/formattingContexts/inline/ruby/RubyFormattingContext.cpp:
(WebCore::Layout::RubyFormattingContext::adjustLayoutBoundsAndStretchAncestorRubyBase):

Canonical link: https://commits.webkit.org/276402@main